--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,6 +31,7 @@
     "@angular/compiler-cli": "^19.1.3",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "19.0.2",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
